5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/3135/executions/1715_3067.log
== TEST (2019-05-02 17:07:29) 
-- CODE:
a=input("Insira o seu ataque:(Espada flamejante OU Cauda constritora)")
D1=int(input("D1:"))
D2=int(input("D2:"))
D3=int(input("D3:"))
D4=int(input("D4:"))
		 
-- OUTPUT:
1.6
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 17:08:28) 
-- CODE:
a=input("Insira o seu ataque (Espada flamejante OU Cauda constritora):").upper()
D1=int(input("D1:"))
D2=int(input("D2:"))
D3=int(input("D3:"))
D4=int(input("D4:"))
print(a)
-- OUTPUT:
CAUDA
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 17:11:51) 
-- CODE:
a=input("Insira o seu ataque (Espada flamejante OU Cauda constritora):").upper()
D1=int(input("D1:"))
D2=int(input("D2:"))
D3=int(input("D3:"))
D4=int(input("D4:"))

if((a not ESPADA or a not CAUDA)):
	print("Entrada invalida")
elif(D1<=)
-- ERROR:
File "XXXX", line 7
    if((a not ESPADA or a not CAUDA)):
                   ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 17:11:55) 
-- CODE:
a=input("Insira o seu ataque (Espada flamejante OU Cauda constritora):").upper()
D1=int(input("D1:"))
D2=int(input("D2:"))
D3=int(input("D3:"))
D4=int(input("D4:"))

if((a not ESPADA or a not CAUDA)):
	print("Entrada invalida")
elif(D1<=):
-- ERROR:
File "XXXX", line 7
    if((a not ESPADA or a not CAUDA)):
                   ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 17:12:10) 
-- CODE:
a=input("Insira o seu ataque (Espada flamejante OU Cauda constritora):").upper()
D1=int(input("D1:"))
D2=int(input("D2:"))
D3=int(input("D3:"))
D4=int(input("D4:"))

if((a not "ESPADA" or a not "CAUDA")):
	print("Entrada invalida")
elif(D1<=):
-- ERROR:
File "XXXX", line 7
    if((a not "ESPADA" or a not "CAUDA")):
                     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 17:12:24) 
-- CODE:
a=input("Insira o seu ataque (Espada flamejante OU Cauda constritora):").upper()
D1=int(input("D1:"))
D2=int(input("D2:"))
D3=int(input("D3:"))
D4=int(input("D4:"))

if((a not "ESPADA") or (a not "CAUDA")):
	print("Entrada invalida")
elif(D1<=):
-- ERROR:
File "XXXX", line 7
    if((a not "ESPADA") or (a not "CAUDA")):
                     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 17:13:01) 
-- CODE:
a=input("Insira o seu ataque (Espada flamejante OU Cauda constritora):").upper()
D1=int(input("D1:"))
D2=int(input("D2:"))
D3=int(input("D3:"))
D4=int(input("D4:"))

if((a != "ESPADA") or (a!="CAUDA")):
	print("Entrada invalida")

-- OUTPUT:
Entrada invalida
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 17:16:30) 
-- CODE:
a=input("Insira o seu ataque (Espada flamejante OU Cauda constritora):").upper()
D1=int(input("D1:"))
D2=int(input("D2:"))
D3=int(input("D3:"))
D4=int(input("D4:"))

if((a != "ESPADA") or (a!="CAUDA")):
	print("Entrada invalida")
elif((D1<=0 or D1>6)or(D2<=0)or(D2>6))or(D3<=0 or D3>6)or(D4<=0 OR D4>6):
	print("Entrada invalida")

-- ERROR:
File "XXXX", line 9
    elif((D1<=0 or D1>6)or(D2<=0)or(D2>6))or(D3<=0 or D3>6)or(D4<=0 OR D4>6):
                                                                     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 17:16:37) 
-- CODE:
a=input("Insira o seu ataque (Espada flamejante OU Cauda constritora):").upper()
D1=int(input("D1:"))
D2=int(input("D2:"))
D3=int(input("D3:"))
D4=int(input("D4:"))

if((a != "ESPADA") or (a!="CAUDA")):
	print("Entrada invalida")
elif((D1<=0 or D1>6)or(D2<=0)or(D2>6))or(D3<=0 or D3>6)or(D4<=0 or D4>6):
	print("Entrada invalida")

-- OUTPUT:
Entrada invalida
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 17:20:42) 
-- CODE:
a=input("Insira o seu ataque (Espada flamejante OU Cauda constritora):").upper()
D1=int(input("D1:"))
D2=int(input("D2:"))
D3=int(input("D3:"))
D4=int(input("D4:"))
cauda=(D1+D2+D3)*D4
if((a != "ESPADA") or (a!="CAUDA")):
	print("Entrada invalida")
elif((D1<=0 or D1>6)or(D2<=0)or(D2>6))or(D3<=0 or D3>6)or(D4<=0 or D4>6):
	print("Entrada invalida")

elif(a=="ESPADA"):
	print()
elif(a=="CAUDA"):
	print(cauda)
	
-- OUTPUT:
Entrada invalida
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 17:21:32) 
-- CODE:
a=input("Insira o seu ataque (Espada flamejante OU Cauda constritora):").upper()
D1=int(input("D1:"))
D2=int(input("D2:"))
D3=int(input("D3:"))
D4=int(input("D4:"))
cauda=(D1+D2+D3)*D4
if((a != "ESPADA") or (a!="CAUDA")):
	print("Entrada invalida")
elif((D1<=0 or D1>6)or(D2<=0)or(D2>6))or(D3<=0 or D3>6)or(D4<=0 or D4>6):
	print("Entrada invalida")
elif(a=="ESPADA"):
	print()
elif(a=="CAUDA"):
	print(cauda)
	
-- OUTPUT:
Entrada invalida
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 17:21:46) 
-- CODE:
a=input("Insira o seu ataque (Espada flamejante OU Cauda constritora):").upper()
D1=int(input("D1:"))
D2=int(input("D2:"))
D3=int(input("D3:"))
D4=int(input("D4:"))
cauda=(D1+D2+D3)*D4
if((a != "ESPADA") or (a!="CAUDA")):
	print("Entrada invalida")
elif((D1<=0 or D1>6)or(D2<=0)or(D2>6))or(D3<=0 or D3>6)or(D4<=0 or D4>6):
	print("Entrada invalida")
elif(a=="ESPADA"):
	print()
elif(a=="CAUDA"):
	print(cauda)
	
-- OUTPUT:
Entrada invalida
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 17:22:09) 
-- CODE:
a=input("Insira o seu ataque (Espada flamejante OU Cauda constritora):").upper()
D1=int(input("D1:"))
D2=int(input("D2:"))
D3=int(input("D3:"))
D4=int(input("D4:"))
cauda=(D1+D2+D3)*D4
if(a!= "ESPADA" or a!="CAUDA"):
	print("Entrada invalida")
elif((D1<=0 or D1>6)or(D2<=0)or(D2>6))or(D3<=0 or D3>6)or(D4<=0 or D4>6):
	print("Entrada invalida")
elif(a=="ESPADA"):
	print()
elif(a=="CAUDA"):
	print(cauda)
	
-- OUTPUT:
Entrada invalida
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 17:22:42) 
-- CODE:
a=input("Insira o seu ataque (Espada flamejante OU Cauda constritora):").upper()
D1=int(input("D1:"))
D2=int(input("D2:"))
D3=int(input("D3:"))
D4=int(input("D4:"))
cauda=(D1+D2+D3)*D4
if(a!= "ESPADA" or a!="CAUDA"):
	print("Entrada invalida")

elif(a=="ESPADA"):
	print()
elif(a=="CAUDA"):
	print(cauda)
	
-- OUTPUT:
Entrada invalida
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 17:23:02) 
-- CODE:
a=input("Insira o seu ataque (Espada flamejante OU Cauda constritora):").upper()
D1=int(input("D1:"))
D2=int(input("D2:"))
D3=int(input("D3:"))
D4=int(input("D4:"))
cauda=(D1+D2+D3)*D4
if(a!= "ESPADA" or a!="CAUDA"):
	print("Entrada invalida")

elif(a=="ESPADA"):
	print()
elif(a=="CAUDA"):
	print(cauda)
	
-- OUTPUT:
Entrada invalida
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 17:24:10) 
-- CODE:
a=input("Insira o seu ataque (Espada flamejante OU Cauda constritora):").upper()
D1=int(input("D1:"))
D2=int(input("D2:"))
D3=int(input("D3:"))
D4=int(input("D4:"))
cauda=(D1+D2+D3)*D4
elif((D1<=0 or D1>6)or(D2<=0)or(D2>6))or(D3<=0 or D3>6)or(D4<=0 or D4>6):
	print("Entrada invalida")
elif(a=="ESPADA"):
	print()
elif(a=="CAUDA"):
	print(cauda)
else:
	print("Entrada invalida")
	
-- ERROR:
File "XXXX", line 7
    elif((D1<=0 or D1>6)or(D2<=0)or(D2>6))or(D3<=0 or D3>6)or(D4<=0 or D4>6):
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 17:24:34) 
-- CODE:
a=input("Insira o seu ataque (Espada flamejante OU Cauda constritora):").upper()
D1=int(input("D1:"))
D2=int(input("D2:"))
D3=int(input("D3:"))
D4=int(input("D4:"))
cauda=(D1+D2+D3)*D4
if((D1<=0 or D1>6)or(D2<=0)or(D2>6))or(D3<=0 or D3>6)or(D4<=0 or D4>6):
	print("Entrada invalida")
elif(a=="ESPADA"):
	print()
elif(a=="CAUDA"):
	print(cauda)
else:
	print("Entrada invalida")
	
-- OUTPUT:
40
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 17:24:52) 
-- CODE:
a=input("Insira o seu ataque (Espada flamejante OU Cauda constritora):").upper()
D1=int(input("D1:"))
D2=int(input("D2:"))
D3=int(input("D3:"))
D4=int(input("D4:"))
cauda=(D1+D2+D3)*D4
if((D1<=0 or D1>6)or(D2<=0)or(D2>6))or(D3<=0 or D3>6)or(D4<=0 or D4>6):
	print("Entrada invalida")
elif(a=="ESPADA"):
	print()
elif(a=="CAUDA"):
	print(cauda)
else:
	print("Entrada invalida")
	
-- OUTPUT:
40
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 17:25:02) 
-- CODE:
a=input("Insira o seu ataque (Espada flamejante OU Cauda constritora):").upper()
D1=int(input("D1:"))
D2=int(input("D2:"))
D3=int(input("D3:"))
D4=int(input("D4:"))
cauda=(D1+D2+D3)*D4
if((D1<=0 or D1>6)or(D2<=0)or(D2>6))or(D3<=0 or D3>6)or(D4<=0 or D4>6):
	print("Entrada invalida")
elif(a=="ESPADA"):
	print()
elif(a=="CAUDA"):
	print(cauda)
else:
	print("Entrada invalida")
	
-- OUTPUT:
40
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 17:25:13) 
-- CODE:
a=input("Insira o seu ataque (Espada flamejante OU Cauda constritora):").upper()
D1=int(input("D1:"))
D2=int(input("D2:"))
D3=int(input("D3:"))
D4=int(input("D4:"))
cauda=(D1+D2+D3)*D4
if((D1<=0 or D1>6)or(D2<=0)or(D2>6))or(D3<=0 or D3>6)or(D4<=0 or D4>6):
	print("Entrada invalida")
elif(a=="ESPADA"):
	print()
elif(a=="CAUDA"):
	print(cauda)
else:
	print("Entrada invalida")
	
-- OUTPUT:
40
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 17:25:23) 
-- CODE:
a=input("Insira o seu ataque (Espada flamejante OU Cauda constritora):").upper()
D1=int(input("D1:"))
D2=int(input("D2:"))
D3=int(input("D3:"))
D4=int(input("D4:"))
cauda=(D1+D2+D3)*D4
if((D1<=0 or D1>6)or(D2<=0)or(D2>6))or(D3<=0 or D3>6)or(D4<=0 or D4>6):
	print("Entrada invalida")
elif(a=="ESPADA"):
	print()
elif(a=="CAUDA"):
	print(cauda)
else:
	print("Entrada invalida")
	
-- OUTPUT:
40
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 17:35:14) 
-- CODE:
a=input("Insira o seu ataque (Espada flamejante OU Cauda constritora):").upper()
D1=int(input("D1:"))
D2=int(input("D2:"))
D3=int(input("D3:"))
D4=int(input("D4:"))
cauda=(D1+D2+D3)*D4
if((D1<=0 or D1>6)or(D2<=0)or(D2>6))or(D3<=0 or D3>6)or(D4<=0 or D4>6):
	print("Entrada invalida")
elif(a=="ESPADA"):
	print(2*(D1+D2+D3+D4+6))
elif(a=="CAUDA"):
	print(cauda)
else:
	print("Entrada invalida")
	
-- OUTPUT:
40
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-02 17:35:33) 
-- CODE:
a=input("Insira o seu ataque (Espada flamejante OU Cauda constritora):").upper()
D1=int(input("D1:"))
D2=int(input("D2:"))
D3=int(input("D3:"))
D4=int(input("D4:"))
cauda=(D1+D2+D3)*D4
if((D1<=0 or D1>6)or(D2<=0)or(D2>6))or(D3<=0 or D3>6)or(D4<=0 or D4>6):
	print("Entrada invalida")
elif(a=="ESPADA"):
	print(2*(D1+D2+D3+D4+6))
elif(a=="CAUDA"):
	print(cauda)
else:
	print("Entrada invalida")
	
-- EXECUTION TIME:
0.153107
-- TEST CASE 1:
---- input:
CAUDA
3
5
2
4
---- correct output:
40
---- user output:
40
-- TEST CASE 2:
---- input:
ESPADA
3
3
3
3
---- correct output:
36
---- user output:
36
-- TEST CASE 3:
---- input:
ESPAD
3
3
3
3
---- correct output:
Entrada invalida
---- user output:
Entrada invalida
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
